fix: update navbar spacing; fixes #92

--- a/packages/logos-docusaurus-theme/src/client/css/custom.scss
+++ b/packages/logos-docusaurus-theme/src/client/css/custom.scss
@@ -183,7 +183,7 @@
   --ifm-navbar-item-padding-horizontal: 0.75rem;
   --ifm-navbar-item-padding-vertical: 0.25rem;
   --ifm-navbar-padding-horizontal: var(--content-padding);
-  --ifm-navbar-padding-vertical: calc(var(--ifm-spacing-vertical) * 0.5);
+  --ifm-navbar-padding-vertical: calc(var(--ifm-spacing-vertical) / 3);
   --ifm-navbar-shadow: var(--ifm-global-shadow-lw);
   --ifm-navbar-search-input-icon: url('data:image/svg+xml;utf8,<svg fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" height="16px" width="16px"><path d="M6.02945,10.20327a4.17382,4.17382,0,1,1,4.17382-4.17382A4.15609,4.15609,0,0,1,6.02945,10.20327Zm9.69195,4.2199L10.8989,9.59979A5.88021,5.88021,0,0,0,12.058,6.02856,6.00467,6.00467,0,1,0,9.59979,10.8989l4.82338,4.82338a.89729.89729,0,0,0,1.29912,0,.89749.89749,0,0,0-.00087-1.29909Z" /></svg>');
   --ifm-navbar-sidebar-width: 100vw;
@@ -474,13 +474,12 @@ small {
   text-decoration-color: #fff !important;
 }
 
+.navbar__left-items > a:not(:last-child) {
+  margin-right: 1.25rem;
+}
+
 .navbar__left-items > a:not(:last-child)[href^='/'] {
-  &:after {
-    content: '•';
-    margin-left: 16px;
-    text-decoration: none;
-    display: inline-block;
-  }
+  margin-right: 1.75rem;
 }
 
 .menu__list-item .menu__link {
@@ -532,7 +531,7 @@ small {
 .navbar__item {
   display: inline-flex;
   align-items: center;
-  padding: 0 8px;
+  padding: 0;
 }
 
 .navbar__left-items > .navbar__item:first-of-type {
